Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* Search coverage with product name or code

Version 1.3 - 2015-01-22
* Add extra_data values validation

Version 1.2 - 2014-07-01
* Changelog file creation