@@ -1,3 +1,5 @@
+*Allow to define style template on a product for report generation
+
 Version 1.6 - 2015-12-23
 
 Version 1.4 - 2015-05-29
